--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -2,6 +2,13 @@
 
 .ex-1-square:hover{
     background-color: red;
-    transition: all 2s;
+    transition: all 3s;
 }
 
+
+/* esercizio 2 */
+
+.ex-2-square:active{
+    width: 100%;
+    transition: all 3s;
+}
