--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -12,3 +12,15 @@
     width: 100%;
     transition: all 3s;
 }
+
+
+/* esercizio 3 */
+
+.ex-3-square:hover{
+    border-radius: 50%;
+    transition: all 3s;
+}
+
+
+/* esercizio 4 */
+
