--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,31 +1,69 @@
 /* esercizio 1 */
 
+.ex-1-square{
+    transition: all 3s;
+}
+
 .ex-1-square:hover{
     background-color: red;
-    transition: all 3s;
 }
 
 
 /* esercizio 2 */
 
-.ex-2-square:active{
-    width: 100%;
+.ex-2-square{
     transition: all 3s;
+}
+
+.ex-2-square:active{
+    width: 100%; 
 }
 
 
 /* esercizio 3 */
 
-.ex-3-square:hover{
-    border-radius: 50%;
+.ex-3-square{
     transition: all 3s;
+}
+
+.ex-3-square:hover{
+    border-radius: 50%;   
 }
 
 
 /* esercizio 4 */
 
-.ex-4-square:hover{
-    opacity: 0%;
+.ex-4-square{
     transition: all 3s;
 }
 
+.ex-4-square:hover{
+    opacity: 0%;  
+}
+
+
+/* esercizio 5 */
+
+.ex-5-square{
+    transition: all 3s;
+}
+
+.ex-5-square:hover{
+    transform: scale(2);  
+}
+
+.ex-5-square:active{
+    transform: scale(.5);
+}
+
+
+/* esercizio 6 */
+
+.ex-6-img{
+    transition: all 2s;
+}
+
+.ex-6-img:hover{
+    filter: grayscale(100%);
+
+}
