--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -59,11 +59,11 @@
 
 /* esercizio 6 */
 
-.ex-6-img{
-    transition: all 2s;
-}
-
 .ex-6-img:hover{
     filter: grayscale(100%);
 
 }
+
+
+/* esercizio 7 */
+
