--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -90,3 +90,16 @@
 }
 
 
+/* esercizio 9 */
+
+.ex-9-img{
+    transition: all 2s;
+}
+
+.ex-9-img:hover{
+    border-radius: 4rem;
+    filter: sepia(60%);
+    filter: grayscale(80%);
+    transform: scale(.75);
+}
+
